Fixes z-index layers on carousel cards

--- a/src/Cards.css
+++ b/src/Cards.css
@@ -305,6 +305,7 @@
         width: 100%;
         height: 100%;
         z-index: 2;
+        position: relative;
     }
 
     #slider::-webkit-scrollbar {
@@ -320,16 +321,19 @@
         cursor: pointer;
         padding: 15px 20px 15px 20px;
         z-index: 3;
+        position: relative;
     }
 
     .slider-icon.left {
         left: 0;
         z-index: 3;
+        position: relative;
     }
 
     .slider-icon.right {
         right: 0;
         z-index: 3;
+        position: relative;
     }
 
     .slider-icon.left:hover, .slider-icon.right:hover {
@@ -346,6 +350,7 @@
         margin: 0px 25px 0px 15px;
         box-shadow: 2px 2px 2px 2px rgb(0 0 0 / 12%);
         z-index: 2;
+        position: relative;
     }
 
     .slider-card-image {
@@ -356,11 +361,13 @@
         border-top-right-radius: 10px;
         overflow: hidden;
         z-index: 3;
+        position: relative;
     }
 
     .slider-card-title, .slider-card-description {
         margin: 10px 0px 5px 10px;
         z-index: 3;
+        position: relative;
     }
 
     .slider-card-title {
@@ -378,6 +385,7 @@
         height: 50px;
         max-height: 50px;
         z-index: 3;
+        position: relative;
     }
 
     /* Sets a maximum height for the text and aligns all the view buttons and see notes links. */
@@ -386,15 +394,18 @@
         height: 40%;
         max-height: 40%;
         z-index: 3;
+        position: relative;
     }
 
     #notes-wrapper {
         margin: 0% 0% 20% 0%;
         z-index: 3;
+        position: relative;
     }
 
     #toggled-notes {
         z-index: 4;
+        position: relative;
     }
 
     #notes-text-container {
@@ -505,6 +516,7 @@
         text-align: center;
         cursor: help;
         z-index: 0;
+        position: relative;
     }
 
     .slider-card-link a,
